Closed
Bug 233288
Opened 22 years ago
Closed 21 years ago
Auto-repeat does not work in Japanese input.
Categories
(Camino Graveyard :: General, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
Camino0.9
People
(Reporter: sugar.waffle, Assigned: mikepinkerton)
Details
(Keywords: intl)
Attachments
(1 file)
|
1.76 KB,
patch
|
sfraser_bugs
:
review+
jaas
:
review+
sfraser_bugs
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent:
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; ja-JP; rv:1.7a) Gecko/20040207 Camino/0.7+
In the state where temporary Japanese is inputted, even if it continues pushing
a key, auto-repeat does not work.
Reproducible: Always
Steps to Reproduce:
1.Turn on input-method.
2.Pushing a key is continued.(e.g. push 'a' key)
3.
Actual Results:
Auto-repeat does not work.
Expected Results:
Auto-repeat does work.
| Assignee | ||
Updated•22 years ago
|
Target Milestone: --- → Camino0.9
crot0@infoseek.jp, does it work using Mozilla or Firefox?
Keywords: intl
(In reply to comment #1)
> crot0@infoseek.jp, does it work using Mozilla or Firefox?
Yes.
Mozilla and Firefox is satisfactory auto-repeat works.
auto-repeat does not commit only Camino.
Of course, there is no problem in English input mode also by Camino.
Does it matter if you’re typing in the URL Location field or in an HTML TEXTAREA?
(In reply to comment #3)
> Does it matter if you’re typing in the URL Location field or in an HTML TEXTAREA?
I hardly input Japanese on a URL bar.
Although tried for the first time, there was no problem in a URL bar.
(The problem did not have Google search bar.)
This problem is generated in INPUT and TEXTAREA.
About whether this problem is important, judgment is difficult...
But I think that it is good on user experience that auto-repeat work in any
input modes.
crot0@infoseek.jp could you provide us non Japanese developers some steps on how
we could check the behaviour, perhaps a test case?
And could you update the status on this bug with a recent version of Camino?
(In reply to comment #5)
> crot0@infoseek.jp could you provide us non Japanese developers some steps on how
> we could check the behaviour, perhaps a test case?
For example, if IME is turned ON by INPUT and TEXTAREA of google or bugzilla and
it continues pushing some keys, this problem will reappear.
Step:
1. goto http://www.google.com
2. IME is turned ON.
3. Pushing a key is continued.
For example, pushing the "a" key is continued.
> And could you update the status on this bug with a recent version of Camino?
This problem is still reproduced.
2004102119 (v0.8+)
This problem is not reproduced by Mozilla and Firefox.
Only Camino is reproduced.
If IME is turned OFF, of course, auto-repeat will work.
1. We still need confirmation of this problem
2. If this can be confirmed, is this a regression?
3. Is this fix necessary for 0.9? We are being conservative about 0.9 blockers
now, and if this is not a regression then it is likely that this should go on
the 1.0 list.
(In reply to comment #7)
> 1. We still need confirmation of this problem
I can confirm this problem with 2005-03-05-08 NB.
> 2. If this can be confirmed, is this a regression?
I'm sorry to say I don't know when this problem started and this is a regression.
> 3. Is this fix necessary for 0.9? We are being conservative about 0.9 blockers
> now, and if this is not a regression then it is likely that this should go on
> the 1.0 list.
Non ASCII users always use IME in input or text area, so I think this fix is
desired for 0.9.
Attachment #177217 -
Flags: superreview?(pinkerton)
Attachment #177217 -
Flags: review?(sfraser_bugs)
Comment 11•21 years ago
|
||
Comment on attachment 177217 [details] [diff] [review]
patch : go to "isARepeat" part when user turn on IME.
Seems reasonable. Has it been thoroughly tested?
Attachment #177217 -
Flags: review?(sfraser_bugs) → review+
Attachment #177217 -
Flags: review+
Updated•21 years ago
|
Attachment #177217 -
Flags: superreview?(pinkerton) → superreview+
Comment 12•21 years ago
|
||
landed on trunk
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•