make auto-repeat work with Japanese input. patch by waverider. r=joshmoz sr=smfr b=233288